Use relative paths everywhere

--- a/www/css/font.css
+++ b/www/css/font.css
@@ -2,5 +2,5 @@
   font-family: 'Arima Madurai';
   font-style: normal;
   font-weight: 300;
-  src: local('Arima Madurai Light'), local('ArimaMadurai-Light'), url(/css/t5t7IRoeKYORG0WNMgnC3seB1ZXtupymeg.ttf) format('truetype');
+  src: local('Arima Madurai Light'), local('ArimaMadurai-Light'), url(./t5t7IRoeKYORG0WNMgnC3seB1ZXtupymeg.ttf) format('truetype');
 }
