--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,4 +1,4 @@
-@import url("/css/font.css");
+@import url("./font.css");
 *,
 *::before,
 *::after {
@@ -23,7 +23,7 @@ h1 {
   align-items: center;
   justify-content: center;
   min-height: 35rem;
-  background-image: linear-gradient(to bottom, rgba(255, 168, 76, 0.6) 0%, rgba(255, 123, 13, 0.6) 100%), url("/images/background.jpg");
+  background-image: linear-gradient(to bottom, rgba(255, 168, 76, 0.6) 0%, rgba(255, 123, 13, 0.6) 100%), url("../images/background.jpg");
   background-blend-mode: soft-light;
   background-size: cover;
   background-position: center center;
@@ -31,7 +31,7 @@ h1 {
 }
 
 .bird {
-  background-image: url(/images/bird-cells.svg);
+  background-image: url(../images/bird-cells.svg);
   background-size: auto 100%;
   width: 88px;
   height: 125px;
