--- a/www/css/style.css
+++ b/www/css/style.css
@@ -2,7 +2,19 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+  box-sizing: inherit;
+}
+
+body {
+  height: 100%;
+  background-image: linear-gradient(to bottom, rgba(255, 168, 76, 0.6) 0%, rgba(255, 123, 13, 0.6) 100%), url("../images/background.jpg");
+  background-blend-mode: soft-light;
+  background-size: cover;  
+  background-position-x: center;
+  background-position-y: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  overflow: hidden;
 }
 
 h1 {
@@ -22,12 +34,7 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 35rem;
-  background-image: linear-gradient(to bottom, rgba(255, 168, 76, 0.6) 0%, rgba(255, 123, 13, 0.6) 100%), url("../images/background.jpg");
-  background-blend-mode: soft-light;
-  background-size: cover;
-  background-position: center center;
-  padding: 2rem;
+  padding: 20% 00% 0% 0%
 }
 
 .bird {
